# vcx-example

./: .gitignore  CMakeLists.txt  README.md  cp_vcx-example_to_include.sh  main.cpp
src/: Example.h
unittest/: .gitignore  CMakeLists.txt  ExampleTest.cpp
unittest/lib/googlemock/: CMakeLists.txt  README.md
unittest/lib/googlemock/docs/: cheat_sheet.md  cook_book.md  for_dummies.md  gmock_faq.md
unittest/lib/googlemock/include/gmock/: gmock-actions.h  gmock-generated-actions.h  gmock-generated-actions.h.pump  gmock-matchers.h  gmock-spec-builders.h
unittest/lib/googlemock/include/gmock/internal/: gmock-port.h
unittest/lib/googlemock/include/gmock/internal/custom/: README.md
unittest/lib/googlemock/scripts/: fuse_gmock_files.py  gmock-config.in  gmock_doctor.py
unittest/lib/googlemock/scripts/generator/: README.cppclean
unittest/lib/googlemock/src/: gmock-internal-utils.cc  gmock-spec-builders.cc
unittest/lib/googlemock/test/: gmock-internal-utils_test.cc  gmock-port_test.cc  gmock_stress_test.cc
unittest/lib/googletest/: CMakeLists.txt  README.md
unittest/lib/googletest/cmake/: internal_utils.cmake
unittest/lib/googletest/docs/: advanced.md  faq.md  primer.md  pump_manual.md  samples.md
unittest/lib/googletest/include/gtest/: gtest-death-test.h  gtest-param-test.h  gtest-printers.h  gtest.h  gtest_pred_impl.h
unittest/lib/googletest/include/gtest/internal/: gtest-filepath.h  gtest-internal.h  gtest-param-util.h  gtest-port-arch.h  gtest-port.h  gtest-string.h  gtest-type-util.h
unittest/lib/googletest/include/gtest/internal/custom/: README.md  gtest-printers.h
unittest/lib/googletest/samples/: sample1_unittest.cc
unittest/lib/googletest/scripts/: fuse_gtest_files.py  gen_gtest_pred_impl.py  gtest-config.in  release_docs.py
unittest/lib/googletest/src/: gtest-all.cc  gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest.cc
unittest/lib/googletest/test/: googletest-filepath-test.cc  googletest-options-test.cc  googletest-output-test.py  googletest-param-test-test.cc  googletest-param-test2-test.cc  googletest-test2_test.cc  gtest-typed-test2_test.cc  gtest-typed-test_test.cc  gtest-typed-test_test.h  gtest_main_unittest.cc  gtest_skip_environment_check_output_test.py  gtest_sole_header_test.cc  gtest_stress_test.cc  gtest_unittest.cc
